--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -19,12 +19,15 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:id="@+id/cuadroParent"
+    android:clickable="true"
+    android:onClick="ajustes"
     android:layout_height="wrap_content"
     android:minHeight="120dp"
     >
     <LinearLayout
         android:layout_width="fill_parent"
         android:orientation="vertical"
+
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
@@ -354,6 +357,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/wifiinfo"
             android:minHeight="120dp"
             >
             <LinearLayout
@@ -416,7 +420,7 @@
                                    android:textSize="14sp"
                                    android:textColor="#999999"
                                    android:layout_height="wrap_content"
-                                   android:text="Contraseña"
+                                   android:text="Contraseña:"
                                    android:id="@+id/textView11" />
 
                                <TextView
@@ -424,7 +428,7 @@
                                    android:textSize="14sp"
                                    android:textColor="#999"
                                    android:layout_height="wrap_content"
-                                   android:text="Dispositivos conectados"
+                                   android:text="Dispositivos conectados:"
                                     />
                         </LinearLayout>
                             <LinearLayout
@@ -436,6 +440,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:textSize="14sp"
+                                    android:id="@+id/ssid"
                                     android:textColor="#000"
                                     android:layout_height="wrap_content"
                                     android:text="Nombre de mi red"
@@ -445,6 +450,7 @@
                                     android:layout_width="wrap_content"
                                     android:textSize="14sp"
                                     android:textColor="#000"
+                                    android:id="@+id/ssid_pass"
                                     android:layout_height="wrap_content"
                                     android:text="Contraseña"
                                     />
@@ -452,6 +458,7 @@
                                     android:layout_width="wrap_content"
                                     android:textSize="14sp"
                                     android:textColor="#000"
+                                    android:id="@+id/ssid_peers"
                                     android:layout_height="wrap_content"
                                     android:text="Dispositivos conectados:"
                                     />
@@ -561,6 +568,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
     android:orientation="vertical"
+
     android:layout_gravity="center_horizontal"
     android:gravity="center_horizontal"
         android:layout_weight=".333">
@@ -583,6 +591,8 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:alpha=".5"
+            android:clickable="true"
+            android:onClick="edocuenta"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
             android:layout_weight=".333">
@@ -605,6 +615,8 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:alpha=".5"
+            android:clickable="true"
+            android:onClick="ayudaa"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
             android:layout_weight=".333">
