--- a/app/src/main/res/layout/card_list_item_pay.xml
+++ b/app/src/main/res/layout/card_list_item_pay.xml
@@ -24,62 +24,64 @@
             android:gravity="center"/>
     </LinearLayout>
 
-<RelativeLayout
-    android:layout_width="fill_parent"
-    android:background="#111111"
-    android:id="@+id/movinglayout"
-    android:layout_height="50dp">
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:background="#fff"
+        android:id="@+id/movinglayout"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true">
 
-    <LinearLayout
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:visibility="gone"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/rcheck"
-        android:id="@+id/radioon"
-        android:orientation="vertical"
-        android:layout_marginRight="25dp"
-        android:layout_margin="5dp"></LinearLayout>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="match_parent">
-        <ImageView
-            android:layout_width="40dp"
-            android:src="@drawable/amex"
-            android:id="@+id/crdimg"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_height="40dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/vendortjt"
+        <LinearLayout
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:visibility="gone"
-            android:layout_centerHorizontal="true"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
-            android:textColor="#D60270"
-            android:textSize="17sp"
-            android:layout_alignParentBottom="true"
-            android:text="MasterCard / Vigente"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/tjtnumber"
-            android:layout_marginRight="15dp"
             android:layout_alignParentRight="true"
-            android:gravity="center_vertical"
             android:layout_centerVertical="true"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            android:layout_centerInParent="true"
-            android:textColor="#D60270"
-            android:text="●●●● ●●●● ●●●● 5478"/>
+            android:background="@drawable/rcheck"
+            android:id="@+id/radioon"
+            android:orientation="vertical"
+            android:layout_marginRight="25dp"
+            android:layout_margin="5dp"></LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="40dp"
+                android:src="@drawable/amex"
+                android:id="@+id/crdimg"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_height="40dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/vendortjt"
+                android:visibility="gone"
+                android:layout_centerHorizontal="true"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
+                android:textColor="#D60270"
+                android:textSize="17sp"
+                android:layout_alignParentBottom="true"
+                android:text="MasterCard / Vigente"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/tjtnumber"
+                android:layout_marginRight="15dp"
+                android:layout_alignParentRight="true"
+                android:gravity="center_vertical"
+                android:layout_centerVertical="true"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:layout_centerInParent="true"
+                android:textColor="#000"
+                android:text="●●●● ●●●● ●●●● 5478"/>
 
 
-</LinearLayout>
-    </RelativeLayout>
-    </RelativeLayout>
+    </LinearLayout>
+        </RelativeLayout>
+</RelativeLayout>
