--- a/app/src/main/res/layout/pagos_list_item.xml
+++ b/app/src/main/res/layout/pagos_list_item.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="fill_parent"
-    android:paddingBottom="1dp"
-    android:paddingTop="1dp"
+
     android:layout_height="wrap_content">
+    <LinearLayout
+        android:orientation="vertical" android:layout_width="fill_parent"
+        android:background="#fff"
+        android:layout_height="wrap_content">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="25dp"
@@ -11,17 +14,19 @@
         android:visibility="gone"
         android:gravity="center_vertical"
         android:layout_alignParentLeft="true"
-        android:textColor="#fff"
+        android:textColor="#000"
         android:layout_marginLeft="10dp"
         android:textSize="13sp"
         android:text="Prueba"/>
     <LinearLayout
         android:orientation="horizontal" android:layout_width="fill_parent"
         android:padding="1dp"
+        android:background="#bbb"
         android:layout_height="60dp">
     <RelativeLayout
         android:layout_width="fill_parent"
         android:orientation="horizontal"
+        android:background="#fff"
         android:layout_height="fill_parent">
     <LinearLayout
         android:layout_width="fill_parent"
@@ -43,7 +48,7 @@
         android:id="@+id/formaL"
         android:gravity="center_vertical"
         android:layout_alignParentLeft="true"
-        android:textColor="#fff"
+        android:textColor="#000"
         android:layout_marginLeft="5dp"
         android:textSize="12sp"
         android:text="Prueba"/>
@@ -57,7 +62,7 @@
             android:layout_centerHorizontal="true"
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:text="Prueba"/>
 
         <TextView
@@ -67,7 +72,7 @@
             android:textSize="12sp"
             android:gravity="center"
             android:layout_gravity="center_vertical"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:maxWidth="90dp"
             android:layout_marginRight="10dp"
             android:layout_alignParentRight="true"
@@ -118,4 +123,5 @@
             android:layout_alignParentRight="true"
             />
     </RelativeLayout>
+    </LinearLayout>
     </LinearLayout>
