--- a/app/src/main/res/drawable/llborder.xml
+++ b/app/src/main/res/drawable/llborder.xml
@@ -7,5 +7,5 @@
         android:bottomLeftRadius="0dp" />
     <stroke
         android:width="1dp"
-        android:color="#b1b1b1" />
+        android:color="#000" />
 </shape>
