--- a/app/src/main/res/layout/activity_medios_de_pago.xml
+++ b/app/src/main/res/layout/activity_medios_de_pago.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
+    android:background="@color/izzi_background"
     tools:context="telecom.televisa.com.izzi.MediosDePagoActivity">
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
             <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#b1b1b1"
+            android:textColor="#000"
             android:id="@+id/codetext"
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="80dp"
@@ -40,7 +40,7 @@
     <TextView
         android:layout_width="match_parent"
         android:text="Con este código puedes pagar en tiendas izzi y en tiendas de Grupo Walmart."
-        android:textColor="#b1b1b1"
+        android:textColor="#000"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="250dp"
         android:gravity="center_horizontal"
@@ -51,12 +51,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#33b1b1b1"
+
         android:layout_alignParentBottom="true">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="49dp"
-            android:background="#000"
+            android:background="#fff"
             android:layout_alignParentBottom="true">
             <ImageView
                 android:layout_width="30dp"
