--- a/app/src/main/res/layout/activity_pagos_main.xml
+++ b/app/src/main/res/layout/activity_pagos_main.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/black_back"
+    android:background="@color/izzi_background"
     android:id="@+id/vista"
     tools:context="telecom.televisa.com.izzi.PagosMainActivity">
     <LinearLayout
@@ -34,7 +34,7 @@
                     android:gravity="center"
                     android:layout_marginTop="10dp"
                     android:textSize="20sp"
-                    android:textColor="#b1b1b1"
+                    android:textColor="#000"
                     android:text="Total a pagar"
                     />
                 <TextView
@@ -42,7 +42,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center_horizontal"
                     android:layout_marginTop="10dp"
-                    android:textColor="#fff"
+                    android:textColor="#000"
                     android:textStyle="bold"
                     android:textSize="30sp"
                     android:id="@+id/totalText"
@@ -63,7 +63,7 @@
                     <TextView
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="#b1b1b1"
+                        android:textColor="#000"
                         android:textSize="16sp"
                         android:gravity="center"
                         android:text="Mes de facturación"
@@ -72,7 +72,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:gravity="center"
-                        android:textColor="#fff"
+                        android:textColor="#000"
                         android:textSize="19sp"
                         android:textStyle="bold"
                         android:id="@+id/fechaTextMonth"
@@ -91,14 +91,14 @@
                         android:gravity="center"
                         android:textSize="15sp"
                         android:id="@+id/leyenda1Text"
-                        android:textColor="#b1b1b1"
+                        android:textColor="#000"
                         android:text="Pagar antes de"
                         />
                     <TextView
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:gravity="center"
-                        android:textColor="#fff"
+                        android:textColor="#000"
                         android:textSize="19sp"
                         android:id="@+id/fechaText"
                         android:text="Junio"
@@ -114,6 +114,7 @@
             android:layout_marginBottom="20dp"
             android:padding="10dp"
             android:layout_gravity="center_horizontal"
+            android:visibility="gone"
             android:background="@drawable/cardout"
             android:layout_height="130dp">
             <RelativeLayout
@@ -150,7 +151,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/vendortjt"
                     android:layout_centerHorizontal="true"
-                    android:textColor="#FFF"
+                    android:textColor="#000"
                     android:textSize="17sp"
                     android:layout_marginBottom="10dp"
                    android:layout_alignParentBottom="true"
@@ -172,7 +173,7 @@
                         android:textSize="15sp"
                         android:layout_centerInParent="true"
 
-                        android:textColor="#fff"
+                        android:textColor="#000"
                         android:text="●●●● ●●●● ●●●● 5478"/>
                 </LinearLayout>
             </RelativeLayout>
@@ -238,7 +239,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:text="Pagar"
-                android:textColor="#FFf"
+                android:textColor="#fff"
                 android:textSize="17sp"
                 android:gravity="center"
 
