--- a/app/src/main/res/layout/activity_recupera_fin.xml
+++ b/app/src/main/res/layout/activity_recupera_fin.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/black_back"
+    android:background="@color/izzi_background"
     tools:context="telecom.televisa.com.izzi.RecuperaFinActivity">
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:visibility="visible"
             android:text="Servicios contratados"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="18dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
@@ -52,7 +52,7 @@
             android:layout_gravity="center"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:gravity="center"/>
 
     </LinearLayout>
