--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -2,6 +2,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="46dp">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
@@ -49,7 +50,31 @@
                 android:layout_centerVertical="true"
                 android:src="@drawable/menu" />
             </LinearLayout>
-
+        <RelativeLayout
+            android:layout_width="50dp"
+            android:id="@+id/m_center_container"
+            android:layout_height="50dp"
+            android:clickable="true"
+            android:onClick="notifications"
+            android:padding="5dp"
+            android:layout_alignParentRight="true"
+            >
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/message_g"/>
+            <TextView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:textColor="#fff"
+                android:id="@+id/notificationCount"
+                android:gravity="center"
+                android:text="1"
+                android:textSize="15sp"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/notification_container"/>
+            </RelativeLayout>
         </RelativeLayout>
         <LinearLayout
             android:layout_width="fill_parent"
