--- a/app/src/main/res/layout/push_list_item.xml
+++ b/app/src/main/res/layout/push_list_item.xml
@@ -65,6 +65,14 @@
             android:layout_marginRight="10dp"
             android:layout_alignParentRight="true"
             android:text="Prueba"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:id="@+id/wave"
+            android:scaleType="fitXY"
+            android:visibility="gone"
+            android:src="@drawable/waves"
+            android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 </LinearLayout>
     </LinearLayout>
