--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -1,7 +1,40 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash"
+    android:background="@color/izzi_background"
     tools:context="telecom.televisa.com.izzi.SplashScreen">
 
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"
+        android:src="@drawable/splash1"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/lineaspash"
+        android:layout_alignParentBottom="true"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:scaleType="fitXY"
+        android:rotation="180"
+        android:src="@drawable/lineaspash"
+        />
+
+    <ImageView
+        android:layout_width="3dp"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/lineaspash2"
+        android:layout_alignParentBottom="true"/>
+    <ImageView
+        android:layout_width="3dp"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:layout_alignParentRight="true"
+        android:rotation="180"
+        android:src="@drawable/lineaspash2"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
